--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -36,6 +36,8 @@ spec:
         app.kubernetes.io/name: postgres
         app.kubernetes.io/component: database
     spec:
+      serviceAccountName: dnd-game-postgres
+      automountServiceAccountToken: false
       containers:
       - name: postgres
         image: postgres:15-alpine
@@ -59,9 +61,11 @@ spec:
           requests:
             memory: "256Mi"
             cpu: "250m"
+            ephemeral-storage: "500Mi"
           limits:
             memory: "1Gi"
             cpu: "1000m"
+            ephemeral-storage: "1Gi"
         livenessProbe:
           exec:
             command:
