fix: disable service account automounting in dev overlays
- Add automountServiceAccountToken: false to all deployment patches
- This resolves the remaining 4 security vulnerabilities

--- a/k8s/overlays/dev/deployment-patch.yaml
+++ b/k8s/overlays/dev/deployment-patch.yaml
@@ -7,6 +7,7 @@ spec:
   replicas: 1
   template:
     spec:
+      automountServiceAccountToken: false
       containers:
       - name: backend
         imagePullPolicy: Always
@@ -33,6 +34,7 @@ spec:
   replicas: 1
   template:
     spec:
+      automountServiceAccountToken: false
       containers:
       - name: frontend
         imagePullPolicy: Always
@@ -56,6 +58,7 @@ spec:
   replicas: 1
   template:
     spec:
+      automountServiceAccountToken: false
       containers:
       - name: postgres
         resources:
@@ -78,6 +81,7 @@ spec:
   replicas: 1
   template:
     spec:
+      automountServiceAccountToken: false
       containers:
       - name: redis
         resources:
