security: remove fallback passwords from CI workflows
- Remove hardcoded fallback values for TEST_DB_PASSWORD and TEST_JWT_SECRET
- CI/CD now requires GitHub secrets to be properly configured
- This ensures no hardcoded passwords exist in the codebase
- Updated documentation to reflect that secrets are required

This fully resolves SonarCloud security vulnerability warnings about
hardcoded database passwords in the CI configuration.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
         image: postgres:14
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: ${{ secrets.TEST_DB_PASSWORD || 'postgres' }}
+          POSTGRES_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
           POSTGRES_DB: dnd_test
         options: >-
           --health-cmd pg_isready
@@ -86,10 +86,10 @@ jobs:
           DB_HOST: localhost
           DB_PORT: 5432
           DB_USER: postgres
-          DB_PASSWORD: ${{ secrets.TEST_DB_PASSWORD || 'postgres' }}
+          DB_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
           DB_NAME: dnd_test
           DB_SSLMODE: disable
-          JWT_SECRET: ${{ secrets.TEST_JWT_SECRET || 'test-secret-key-that-is-at-least-32-characters-long' }}
+          JWT_SECRET: ${{ secrets.TEST_JWT_SECRET }}
         run: |
           cd backend
           go run cmd/server/main.go migrate up
@@ -99,10 +99,10 @@ jobs:
           DB_HOST: localhost
           DB_PORT: 5432
           DB_USER: postgres
-          DB_PASSWORD: ${{ secrets.TEST_DB_PASSWORD || 'postgres' }}
+          DB_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
           DB_NAME: dnd_test
           DB_SSLMODE: disable
-          JWT_SECRET: ${{ secrets.TEST_JWT_SECRET || 'test-secret-key-that-is-at-least-32-characters-long' }}
+          JWT_SECRET: ${{ secrets.TEST_JWT_SECRET }}
           REDIS_HOST: localhost
           REDIS_PORT: 6379
           GO_ENV: test
